--- a/style.css
+++ b/style.css
@@ -4,9 +4,27 @@
     font-family: 'Poppins', sans-serif;
 }
 
+h3 {
+    font-size: 18px;
+    color: #b80031;
+}
+
+.btn_red {
+    border: none;
+    background-color: #b80031;
+    color: #fff;
+    width: 236px;
+    
+    text-align: center;
+}
+
+p {
+    font-size: 16px;
+}
+
 section {
     width: 1160px;
-    margin: 0 auto;
+    margin: 80px auto 0 auto;
 }
 
 header {
@@ -16,13 +34,14 @@ header {
     color: #fff;
 }
 
-header a {
+.btn {
     color: #fff;
     text-decoration: none;
     font-size: 18px;
     padding: 12px;
     border: 2px solid #fff;
     font-weight: bold;
+    display: block;
 }
 
 header a:hover {
@@ -42,12 +61,11 @@ header div {
     padding: 15px 0;
 }
 
-.main-image {
-    position: relative;
-    margin-top: 80px ;
+.main_image {
+    position: relative;    ;
 }
 
-.main-image div {
+.main_image div {
    background-color: rgba(184, 0, 49, 0.4);
    height: 55px;
    display: flex; 
@@ -58,9 +76,24 @@ header div {
    width: 100%;
 }
 
-.main-image p {
+.main_image p {
     font-size: 18px;
     font-weight: bold;
     color: #fff;
     margin: 0 17px;
+}
+
+.item {
+    margin-top: 25px;
+    width: 280px;
+    border: 1px solid #b80031;      
+}
+
+.item_description {
+    padding: 10px;
+}
+
+.container_item {
+    display: flex;
+    justify-content: space-between;
 }
