--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
+/* GENERAL */
+
 * {
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
 
+h1 {
+    font-size: 22px;
+}
+
 h3 {
     font-size: 18px;
     color: #b80031;
+}
+
+.container {
+    width: 1160px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;
+    margin: auto;
 }
 
 .btn_red {
@@ -27,10 +42,10 @@ section {
     margin: 80px auto 0 auto;
 }
 
+/* HEADER */
+
 header {
-    background-color: #8fb900;
-    display: flex;
-    justify-content: center;
+    background-color: #8fb900;    
     color: #fff;
 }
 
@@ -49,17 +64,7 @@ header a:hover {
     background-color: #fff;
 }
 
-header h1 {
-    font-size: 22px;
-}
-
-header div {
-    width: 1160px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 0;
-}
+/* SECTION MAIN IMG */
 
 .main_image {
     position: relative;    ;
@@ -82,6 +87,8 @@ header div {
     color: #fff;
     margin: 0 17px;
 }
+
+/* ITEMS */
 
 .item {
     margin-top: 25px;
@@ -107,4 +114,24 @@ header div {
 
 .description_business {
     width: 570px;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: #8fb900;
+    color: #fff;
+    margin-top: 80px;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;   
+    margin-left: 10px;
+}
+
+footer p {
+    font-size: 22px;
+    font-weight: bold;    
 }
